Added persistance leyer